fix: handle NumberFormatException in FetcherBolt and minor cleanup (#1931)
- FetcherBolt: catch NumberFormatException for crawl delay and max thread
  metadata values; log warning and fall back to defaults
- ConfigurableTopology, URLFilters: replace e.printStackTrace() with
  SLF4J LOG.error()
- CloudSearchUtils: fix error message ("must be" -> "must NOT be");
  replace manual MessageDigest with DigestUtils.sha512Hex()
- S3CacheChecker, S3Cacher: use StandardCharsets.UTF_8 overload of
  URLEncoder.encode() to remove unnecessary checked exception
- JsRenderingDetector: use CharsetIdentification.getCharsetFast() instead
  of hardcoded UTF-8